--- a/src/app/components/not-shared/converter/converter-item/converter-item.component.html
+++ b/src/app/components/not-shared/converter/converter-item/converter-item.component.html
@@ -1,17 +1,30 @@
-<div class="flex gap-3">
-    <a class="{{ currencyItem()?.shortedName === 'IRT' ? 'invisible' : '' }}" [routerLink]="['/', currencyItem()?.slugText]">قیمت {{ currencyItem()?.title }}</a>
+<div class="grid grid-cols-12 w-full justify-end items-center gap-3">
+    <div class="flex items-center justify-start col-span-1 md:col-span-3">
+        <a class="{{ currencyItem()?.shortedName === 'IRT' ? 'invisible' : 'visible' }} w-full leading-5 hidden md:block text-dark dark:text-white rtl text-xs rounded-md py-1.5 text-center px-4 hover:bg-light-text3 hover:dark:bg-dark-border2" [routerLink]="['/', currencyItem()?.slugText]">قیمت {{ currencyItem()?.title }}</a>
+        <a class="{{ currencyItem()?.shortedName === 'IRT' ? 'invisible' : 'visible' }} block md:hidden text-dark dark:text-white rtl text-lg px-2 rounded-md text-center hover:bg-light-text3 hover:dark:bg-dark-border2" [routerLink]="['/', currencyItem()?.slugText]"><i class="bi bi-three-dots-vertical"></i></a>
+    </div>
+
+    <div class="{{ currencyItem()?.shortedName === 'USD' || currencyItem()?.shortedName === 'USDT' ? 'invisible' : '' }} text-right col-span-3 md:col-span-2">
+        <span class="flex items-center justify-end">
+            <p class="text-dark-text2 dark:text-light-text2 text-right font-normal text-2xs md:text-xs">USD</p>
+            <p class="dark:text-white text-dark text-xs md:text-sm font-normal align-middle ml-1">{{ currencyItem()?.dollarStringPrice }}</p>
+        </span>    
+        <p class="font-normal text-xs md:text-sm leading-[180%] {{(currencyItem()?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(currencyItem()?.dollarChangeState === 'low') ? '-' : '+'}}{{currencyItem()?.dollarChanges}}%</p>
+    </div>
     
-    <div class="{{ currencyItem()?.shortedName === 'IRT' ? 'invisible' : '' }}">
-        <p class="font-normal text-sm leading-[180%] {{(currencyItem()?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(currencyItem()?.rialChangeState === 'low') ? '-' : '+'}}{{currencyItem()?.rialChanges}}%</p>
-        <p class="dark:text-white text-dark text-sm font-normal leading-[180%] ml-1">{{ currencyItem()?.tomanStringPrice }}</p>
+    <div class="{{ currencyItem()?.shortedName === 'IRT' ? 'invisible' : '' }} text-right col-span-4 md:col-span-3">
+        <span class="flex items-center justify-end">
+            <p class="text-dark-text2 dark:text-light-text2 text-right font-normal text-2xs md:text-xs">IRT</p>
+            <p class="dark:text-white text-dark text-xs md:text-sm font-normal ml-1">{{ currencyItem()?.tomanStringPrice }}</p>
+        </span>
+        <p class="font-normal text-xs md:text-sm leading-[180%] {{(currencyItem()?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(currencyItem()?.rialChangeState === 'low') ? '-' : '+'}}{{currencyItem()?.rialChanges}}%</p>
     </div>
-
-    <div>
-        <p class="font-normal text-xs leading-[180%] {{(currencyItem()?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(currencyItem()?.dollarChangeState === 'low') ? '-' : '+'}}{{currencyItem()?.dollarChanges}}%</p>
-        <p class="dark:text-white text-dark leading-[180%] text-xs font-normal align-middle ml-1">{{ currencyItem()?.dollarStringPrice }}</p>
-            
+    <div class="flex justify-end col-span-4 gap-2">
+        <div class="flex flex-col items-end gap-1">
+            <p class="text-dark dark:text-white text-right rtl w-full font-bold text-xs md:text-sm line-clamp-2 text-ellipsis">{{ currencyItem()?.title }}</p>
+            <p class="text-dark-text2 dark:text-light-text2 text-right w-full font-normal text-xs">{{ currencyItem()?.shortedName }}</p>
+        </div>
+    
+        <img class="w-8 h-8 object-cover rounded-full" src="{{ currencyItem()?.img }}" alt="{{ currencyItem()?.title }}">
     </div>
-    <p>{{ currencyItem()?.title }}</p>
-
-    <img class="w-8 h-8 object-cover rounded-full" src="{{ currencyItem()?.img }}" alt="{{ currencyItem()?.title }}">
 </div>
