--- a/src/app/components/not-shared/converter/converter-item-skeleton/converter-item-skeleton.component.html
+++ b/src/app/components/not-shared/converter/converter-item-skeleton/converter-item-skeleton.component.html
@@ -1,1 +1,31 @@
-<p>converter-item-skeleton works!</p>
+<div class="grid grid-cols-12 w-full justify-end items-center gap-3">
+    <div class="flex items-center justify-center col-span-1 md:col-span-3">
+        <a class="w-fit leading-5 hidden md:block rtl text-xs py-1.5 text-center px-4 rounded-lg text-transparent animate-pulse bg-light-border dark:bg-dark-border">قیمت آیتم</a>
+        <a class="invisible block md:hidden rtl text-lg px-2 rounded-md text-center hover:bg-light-text3 hover:dark:bg-dark-border2"><i class="bi bi-three-dots-vertical"></i></a>
+    </div>
+
+    <div class="text-right col-span-3 md:col-span-2">
+        <span class="flex items-center justify-end">
+            <p class="text-right font-normal text-2xs md:text-xs invisible">USD</p>
+            <p class="text-xs md:text-sm font-normal align-middle ml-1 rounded-lg text-transparent animate-pulse bg-light-border dark:bg-dark-border line-clamp-1">dollar Price</p>
+        </span>    
+        <p class="font-normal text-xs md:text-sm leading-[180%] invisible">changes%</p>
+    </div>
+    
+    <div class="text-right col-span-4 md:col-span-3">
+        <span class="flex items-center justify-end">
+            <p class="invisible text-right font-normal text-2xs md:text-xs">IRT</p>
+            <p class="text-xs md:text-sm font-normal ml-1 rounded-lg text-transparent animate-pulse bg-light-border dark:bg-dark-border line-clamp-1">toman Price</p>
+        </span>
+        <p class="font-normal text-xs md:text-sm leading-[180%] invisible">change%</p>
+    </div>
+    <div class="flex justify-end items-center col-span-4 gap-2">
+        <div class="flex flex-col items-end gap-1">
+            <p class="text-right rtl w-full font-bold text-xs md:text-sm line-clamp-1 text-ellipsis rounded-lg text-transparent animate-pulse bg-light-border dark:bg-dark-border">some title</p>
+            <p class="text-dark-text2 dark:text-light-text2 text-right w-full font-normal text-xs invisible">name</p>
+        </div>
+    
+        <span class="min-w-8 h-8 object-cover rounded-full text-transparent animate-pulse bg-light-border dark:bg-dark-border"></span>
+
+    </div>
+</div>
